--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@ const apps = [
     { 
         title: 'بروتوكولات الصرف', 
         url: 'https://protocols-one.vercel.app/', 
-        icon: 'fa-book', 
+        icon: 'fa-folder-open', 
         gradient: ['#FF7F50', '#FF6347', '#FF8C69'], 
         description: '',
     }
