--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ body.light-theme {
         closed: true
     },
     { 
-        title: 'مجموعات دوائية (سبتمبر)', 
+        title: 'مجموعات دوائية', 
         url: 'https://finalapp-nine.vercel.app/', 
         icon: 'fa-pills', 
         gradient: ['#8E44AD', '#9E54BD', '#7E349D'], 
