--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   --bg-dark: #0f1624;
   --bg-light: #f0f4f8;
   --text-dark: #e2e8f0;
-  --text-light: #050b11;  /* Darkened for better contrast */
+  --text-light: #050b11;  
   --primary-color: #c0c0c0;
   --secondary-color: #e5e4e2;
   --accent-color: #a8a9ad;
