--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@ body.light-theme {
     },
     { 
         title: 'مجموعات دوائية', 
-        url: 'https://menu2-six.vercel.app/', 
+        urls: ['https://menu2-six.vercel.app/', 'https://desktop-ru4x.vercel.app/'],
         icon: 'fa-pills', 
         gradient: ['#8E44AD', '#9E54BD', '#7E349D'], 
         description: '',
