Update paid link

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ body.light-theme {
     },
     { 
         title: 'المنفذ والتحمل', 
-        urls: ['https://newlist-eta.vercel.app/', 'https://newlist2.vercel.app/'],
+        urls: ['https://remarkable-trifle-b2b303.netlify.app/', 'https://newlist2.vercel.app/'],
         icon: 'fa-dollar-sign', 
         gradient: ['#E84393', '#F853A3', '#D83383'],
         description: '',
