Streamline url structure for hio drug list

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ body.light-theme {
     },
     { 
         title: 'لستة الادوية', 
-        urls: ['https://searchbar-five-beta.vercel.app/', 'https://lx-search-kappa.vercel.app/'],
+        url: 'https://lx-search-kappa.vercel.app/',
         icon: 'fa-search', 
         gradient: ['#20B2AA', '#30C2BA', '#10A29A'],
         description: '',
